[package]
name = "diesel-update-from"
edition = "2021"
version.workspace = true
license = "Apache-2.0"
publish = false

[dependencies]
# Opting in to breaking changes to gain access to types and traits related to
# insertion statements: BatchInsert, ValuesClause. Diesel's codegen builds
# conversions from collections of model types into these types.
diesel = { workspace = true, features = ["postgres", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }

[dev-dependencies]
insta.workspace = true
sui-pg-temp-db.workspace = true
