[package]
name = "event-streams-reader"
edition = "2024"
version = "0.1.0"

[dependencies]
sui-sdk.workspace = true
sui-json-rpc-types.workspace = true
sui-rpc-api.workspace = true
sui-types.workspace = true
sui-light-client = { path = "../sui-light-client" }
move-core-types.workspace = true
fastcrypto.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
reqwest.workspace = true
bcs.workspace = true
serde.workspace = true
hex.workspace = true
rand = "0.8"
