[package]
name = "forking-data-store"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[features]
test-utils = ["dep:mockall"]

[dependencies]
anyhow.workspace = true
bcs.workspace = true
chrono.workspace = true
csv.workspace = true
cynic.workspace = true
fastcrypto.workspace = true
lru.workspace = true
mockall = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"] }
roaring.workspace = true
serde.workspace = true
sui-rpc.workspace = true
sui-rpc-api.workspace = true
sui-types.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
prost.workspace = true
zstd.workspace = true
tonic.workspace = true

[build-dependencies]
cynic-codegen.workspace = true

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true

[package.metadata.cargo-machete]
ignored = ["cynic-codegen"]
