[package]
name = "generate-json-rpc-spec"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
clap = { version = "3.1.17", features = ["derive"] }
pretty_assertions = "1.2.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.80"
tokio = { version = "1.18.2", features = ["full"] }
hyper = { version = "0.14.18", features = ["full"] }

sui = { path = "../sui" }
sui-json-rpc = { path = "../sui-json-rpc" }
sui-json-rpc-api = { path = "../sui-json-rpc-api" }
sui-json = { path = "../sui-json" }
sui-types = { path = "../sui-types" }
sui-config = { path = "../sui-config" }
test-utils = { path = "../test-utils" }

move-package = { git = "https://github.com/move-language/move", rev = "f07e99473e6edfff22f30596dd493ac770f0bb4a" }
workspace-hack = { path = "../workspace-hack"}
