[package]
name = "grpc-reader"
edition = "2024"
version.workspace = true

[dependencies]
fastcrypto.workspace = true
shared-crypto.workspace = true
sui-sdk.workspace = true
sui-json-rpc-types.workspace = true
sui-rpc-api.workspace = true
sui-types.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
bcs.workspace = true
hex.workspace = true
rand = "0.8"

[lints]
workspace = true
